--- a/languages/fa.ini
+++ b/languages/fa.ini
@@ -1,22 +1,24 @@
 ; For future reference:
-;English = English
-Abstract = "Abstract"
-Access = "Access"
-Access URL = "Access URL"
-access_denied = "Access denied."
+;ترجمه شده توسط محمد جواد منصورزاده
+;English = انگلیسی
+;Farsi = فارسی
+Abstract = "چکیده"
+Access = "دسترسی"
+Access URL = "لینک دسترسی"
+access_denied = "دسترسی ممنوع است."
 Accession Number = "Accession Number"
 Account = "Account"
 account_block_options_missing = "Some choices have been removed due to a block on your account. Details: %%details%%"
-Add a Library Card = "Add a Library Card"
-Add a Note = "Add a Note"
-Add Tag = "Add Tag"
-Add Tags = "Add Tags"
+Add a Library Card = "افزودن کارت کتابخانه"
+Add a Note = "افزودن یادداشت"
+Add Tag = "افزودن برچسب"
+Add Tags = "افزودن برچسب"
 Add to another list = "Add to another list"
 Add to Book Bag = "Add to Book Bag"
-Add to favorites = "Save to List"
-Add your comment = "Add your comment"
-add_comment_fail_blank = "Comment cannot be blank."
-add_comment_success = "Comment added."
+Add to favorites = "ذخیره در لیست علاقه مندی ها"
+Add your comment = "افزودن نظر"
+add_comment_fail_blank = "متن نظر نمی تواند خالی باشد"
+add_comment_success = "نظر افزوده شد."
 add_favorite_fail = "Error: Record not saved"
 add_list_fail = "Error: List not created"
 add_other_libraries = "Include articles at other libraries"
@@ -27,41 +29,41 @@ add_tag_note = "Spaces will separate tags. Use quotes for multi-word tags."
 add_tag_success = "Tags Saved"
 add_to_favorites_html = "Add <em>%%title%%</em> to favorites"
 Address = "Address"
-adv_search_all = "All Fields"
-adv_search_author = "Author"
-adv_search_callnumber = "Call Number"
-adv_search_filters = "Applied Filters"
+adv_search_all = "همه فیلدها"
+adv_search_author = "نویسنده"
+adv_search_callnumber = "شماره بازیابی"
+adv_search_filters = "فیلترهای اعمال شده"
 adv_search_isn = "ISBN/ISSN"
-adv_search_journaltitle = "Journal Title"
-adv_search_label = "Search for"
-adv_search_publisher = "Publisher"
-adv_search_select_all = "select all"
+adv_search_journaltitle = "عنوان مجله"
+adv_search_label = "جستجو برای"
+adv_search_publisher = "ناشر"
+adv_search_select_all = "انتخاب همه"
 adv_search_series = "Series"
-adv_search_subject = "Subject"
-adv_search_title = "Title"
-adv_search_toc = "Table of Contents"
-adv_search_year = "Year of Publication"
-Advanced = "Advanced"
-Advanced Search = "Advanced Search"
+adv_search_subject = "موضوع"
+adv_search_title = "عنوان"
+adv_search_toc = "فهرست مندرجات"
+adv_search_year = "سال نشر"
+Advanced = "جستجوی پیشرفته"
+Advanced Search = "جستجوی پیشرفته"
 advSearchError_noRights = "I'm sorry, but you don't have permission to edit that search. Perhaps your browser session has expired?"
 advSearchError_notAdvanced = "The search you have requested to edit is not an advanced search."
 advSearchError_notFound = "The search you have requested was not found."
-ajaxview_label_information = "Information"
-ajaxview_label_tools = "Tools"
-All = "All"
-All Fields = "All Fields"
+ajaxview_label_information = "اطلاعات"
+ajaxview_label_tools = "ابزارها"
+All = "همه"
+All Fields = "همه فیلدها"
 All Pages Loaded = "All Pages Loaded"
 All Text = "All Text"
-alphabrowse_matches = "Results"
+alphabrowse_matches = "نتایج"
 alphabrowselink_html = "Browse entries by %%index%% starting from <a href="%%url%%">%%from%%</a>."
 An error has occurred = "An error has occurred"
 An error occurred during execution; please try again later. = "An error occurred during execution; please try again later."
-AND = "AND"
+AND = "و"
 anonymous_tags = "Anonymous Tags"
 APA Citation = "APA Citation"
 applied_filter = "Applied Filter"
 Article = "Article"
-Ask a Librarian = "Ask a Librarian"
+Ask a Librarian = "از کتابدار بپرس"
 Associated country = "Associated country"
 Audience = "Audience"
 Audio = "Audio"
@@ -72,13 +74,13 @@ authentication_error_denied = "Credentials do not match! Access denied."
 authentication_error_invalid = "Invalid login -- please try again."
 authentication_error_loggedout = "You have logged out."
 authentication_error_technical = "We cannot log you in at this time. Please try again later."
-Author = "Author"
-Author Browse = "Author Browse"
-Author Notes = "Author Notes"
+Author = "نویسنده"
+Author Browse = "مرور نویسنده‌ها"
+Author Notes = "یادداشت نویسنده"
 Author Results for = "Author Results for"
 Author Search Results = "Author Search Results"
 Authority File = "Authority File"
-Authors = "Authors"
+Authors = "نویسندگان"
 Authors Related to Your Search = "Authors Related to Your Search"
 Auto configuration is currently disabled = "Auto configuration is currently disabled"
 auto_configure_description = "If this is a new installation, you may be able to fix the error using VuFind's Auto Configure tool."
@@ -93,17 +95,17 @@ Back to Search Results = "Back to Search Results"
 Backtrace = "Backtrace"
 Bag = "Bag"
 Balance = "Balance"
-Barcode = "Barcode"
+Barcode = "بارکد"
 basic_search_keep_filters = "Retain current filters"
 Be the first to leave a comment = "Be the first to leave a comment"
 Be the first to tag this record = "Be the first to tag this record"
-Bibliographic Details = "Bibliographic Details"
+Bibliographic Details = "اطلاعات کتابشناختی"
 Bibliography = "Bibliography"
 Blu-ray Disc = "Blu-ray Disc"
-Book = "Book"
+Book = "کتاب"
 Book Bag = "Book Bag"
-Book Chapter = "Book Chapter"
-Book Cover = "Book Cover"
+Book Chapter = "فصل کتاب"
+Book Cover = "جلد کتاب"
 bookbag_confirm_empty = "Are you sure you want to empty your Book Bag?"
 bookbag_delete = "Delete Selected Book Bag Items"
 bookbag_delete_selected = "Delete Selected"
@@ -118,7 +120,7 @@ bookbag_print_selected = "Print Selected"
 bookbag_save = "Save Selected Book Bag Items"
 bookbag_save_selected = "Save Selected"
 Bookmark = "Bookmark"
-Books = "Books"
+Books = "کتاب ها"
 Borrowing Location = "Borrowing Location"
 Braille = "Braille"
 Brief View = "Brief View"
@@ -129,13 +131,13 @@ Browse Home = "Browse Home"
 Browse the Catalog = "Browse the Catalog"
 Browse the Collection = "Browse the Collection"
 Browse the Collection Alphabetically = "Browse the Collection Alphabetically"
-browse_author = "Author"
-browse_dewey = "Call Number (Dewey)"
-browse_format = "Format"
-browse_lcc = "Call Number (LC)"
-browse_publishDate = "Year of Publication"
-browse_title = "Title"
-browse_topic = "Topic"
+browse_author = "نویسنده"
+browse_dewey = "شماره بازیابی (دیویی)"
+browse_format = "فرمت"
+browse_lcc = "شماره بازیابی (کنگره)"
+browse_publishDate = "سال نشر"
+browse_title = "عنوان"
+browse_topic = "موضوع"
 bulk_email_success = "Your item(s) were emailed"
 bulk_email_title = "Library Catalog Items"
 bulk_error_missing = "Some data was missing. Your request was not successful."
@@ -195,11 +197,11 @@ citation_issue_abbrev = "no."
 citation_multipage_abbrev = "pp."
 citation_singlepage_abbrev = "p."
 citation_volume_abbrev = "Vol."
-Cite this = "Cite this"
-City = "City"
+Cite this = "استناددهی"
+City = "شهر"
 Clear = "Clear"
-clear_tag_filter = "Clear Filter"
-close = "close"
+clear_tag_filter = "حذف فیلتر"
+close = "بستن"
 Code = "Code"
 Collection = "Collection"
 Collection Browse = "Collection Browse"
@@ -220,8 +222,8 @@ confirm_delete_library_card_text = "Are you sure you want to delete this library
 confirm_delete_list_brief = "Delete List?"
 confirm_delete_list_text = "Are you sure you want to delete this list?"
 confirm_delete_tags_brief = "Delete Tags"
-confirm_dialog_no = "No"
-confirm_dialog_yes = "Yes"
+confirm_dialog_no = "خیر"
+confirm_dialog_yes = "بله"
 confirm_hold_cancel_all_text = "Do you wish to cancel all your current holds?"
 confirm_hold_cancel_selected_text = "Do you wish to cancel your selected holds?"
 confirm_ill_request_cancel_all_text = "Do you wish to cancel all your current interlibrary loan requests?"
@@ -247,26 +249,26 @@ Create New Account = "Create New Account"
 Create New Password = "Create New Password"
 Created = "Created"
 Database = "Database"
-Date = "Date"
-Date of birth = "Date of birth"
-Date of death = "Date of death"
-date_day_placeholder = "D"
-date_from = "From"
-date_month_placeholder = "M"
-date_to = "To"
-date_year_placeholder = "Y"
+Date = "تاریخ"
+Date of birth = "تاریخ تولد"
+Date of death = "تاریخ وفات"
+date_day_placeholder = "روز"
+date_from = "از"
+date_month_placeholder = "ماه"
+date_to = "تا"
+date_year_placeholder = "سال"
 Debug Information = "Debug Information"
 del_search = "Remove Search Group"
-Delete = "Delete"
-delete_all = "Delete All"
-delete_comment_failure = "Could not delete comment."
-delete_comment_success = "Comment deleted."
-delete_list = "Delete List"
-delete_page = "Delete Page"
+Delete = "حذف"
+delete_all = "حذف همه"
+delete_comment_failure = "نمی توان نظر را حذف کرد."
+delete_comment_success = "نظر حذف شد."
+delete_list = "حذف لیست"
+delete_page = "حذف صفحه"
 delete_selected = "Delete Selected"
 delete_selected_favorites = "Delete Selected Favorites"
-delete_tag = "Delete Tag"
-delete_tags = "Delete Tags"
+delete_tag = "حذف برچسب"
+delete_tags = "حذف برچسب ها"
 delete_tags_by = "Delete Tags By"
 Department = "Department"
 Description = "Description"
@@ -275,7 +277,7 @@ Detailed View = "Detailed View"
 Details = "Staff View"
 Displaying the top = "Displaying the top"
 Document Inspector = "Document Inspector"
-Document Type = "Document Type"
+Document Type = "نوع مدرک"
 DOI = "DOI"
 doi_detected_html = "Your search appears to contain a DOI. Click here to check the availability of the resource: <a href="%%url%%">%%doi%%</a>"
 Draw Search Box = "Draw Search Box"
@@ -283,7 +285,7 @@ Due = "Due"
 Due Date = "Due Date"
 DVD = "DVD"
 eBook = "eBook"
-Edit = "Edit"
+Edit = "ویرایش"
 Edit Library Card = "Edit Library Card"
 Edit this Advanced Search = "Edit this Advanced Search"
 edit_list = "Edit List"
