--- a/languages/fa.ini
+++ b/languages/fa.ini
@@ -89,7 +89,7 @@ auto_configure_title = "Auto Configure"
 Availability = "Availability"
 Available = "Available"
 Available Functionality = "Available Functionality"
-Awards = "Awards"
+Awards = "جوایز"
 Back to Record = "Back to Record"
 Back to Search Results = "Back to Search Results"
 Backtrace = "Backtrace"
@@ -122,11 +122,11 @@ bookbag_save_selected = "Save Selected"
 Bookmark = "Bookmark"
 Books = "کتاب ها"
 Borrowing Location = "Borrowing Location"
-Braille = "Braille"
+Braille = "بریل"
 Brief View = "Brief View"
-Browse = "Browse"
-Browse Alphabetically = "Browse Alphabetically"
-Browse for Authors = "Browse for Authors"
+Browse = "مرور"
+Browse Alphabetically = "مرور الفبایی"
+Browse for Authors = "مرور نویسندگان"
 Browse Home = "Browse Home"
 Browse the Catalog = "Browse the Catalog"
 Browse the Collection = "Browse the Collection"
@@ -202,9 +202,9 @@ City = "شهر"
 Clear = "Clear"
 clear_tag_filter = "حذف فیلتر"
 close = "بستن"
-Code = "Code"
-Collection = "Collection"
-Collection Browse = "Collection Browse"
+Code = "کد"
+Collection = "مجموعه"
+Collection Browse = "مرور مجموعه"
 Collection Items = "Collection Items"
 collection_disambiguation = "Found Multiple Matching Collections"
 collection_empty = "No items to display."
@@ -212,7 +212,7 @@ collection_view_record = "View Record"
 Collections = "Collections"
 comment_error_load = "Error: Could Not Redraw Comment List"
 comment_error_save = "Error: Could Not Save Comment"
-Comments = "Comments"
+Comments = "نظرات"
 Company/Entity = "Company/Entity"
 Configuration = "Configuration"
 confirm_delete = "Are you sure you want to delete this?"
